[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smithsonian-scraper"
version = "0.1.0"
description = "Resumable Smithsonian Open Access metadata and media scraper"
readme = "Open access documentation.md"
requires-python = "<=3.12.13"
dependencies = [
    "httpx>=0.28.1",
    "numpy<2",
    "opencv-python-headless<4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
smithsonian-scraper = "smithsonian_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]